--- a/3. RxJs/rxjs-course/package.json
+++ b/3. RxJs/rxjs-course/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.0.1",
+    "@angular/animations": "12.2.10",
     "@angular/cdk": "^12.0.1",
-    "@angular/common": "12.0.1",
-    "@angular/compiler": "12.0.1",
-    "@angular/core": "12.0.1",
-    "@angular/forms": "12.0.1",
+    "@angular/common": "12.2.10",
+    "@angular/compiler": "12.2.10",
+    "@angular/core": "12.2.10",
+    "@angular/forms": "12.2.10",
     "@angular/material": "^12.0.1",
     "@angular/material-moment-adapter": "12.0.1",
-    "@angular/platform-browser": "12.0.1",
-    "@angular/platform-browser-dynamic": "12.0.1",
-    "@angular/router": "12.0.1",
+    "@angular/platform-browser": "12.2.10",
+    "@angular/platform-browser-dynamic": "12.2.10",
+    "@angular/router": "12.2.10",
     "body-parser": "^1.18.3",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
@@ -34,9 +34,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.0.1",
-    "@angular/cli": "^12.0.1",
-    "@angular/compiler-cli": "12.0.1",
-    "@angular/language-service": "12.0.1",
+    "@angular/cli": "^12.2.10",
+    "@angular/compiler-cli": "12.2.10",
+    "@angular/language-service": "12.2.10",
     "@types/express": "^4.0.39",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
@@ -50,6 +50,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "path-browserify": "^1.0.1",
     "protractor": "~7.0.0",
     "ts-node": "~3.2.0",
     "tslint": "~6.1.0",
