--- a/5. NgRx/ngrx-course/angular.json
+++ b/5. NgRx/ngrx-course/angular.json
@@ -141,6 +141,6 @@
   },
   "cli": {
     "defaultCollection": "@ngrx/schematics",
-    "analytics": false
+    "analytics": "78da76fb-38f9-4848-a7fe-1767a6672d4a"
   }
 }
